[package]
name = "duckdns-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.9.3"
reqwest = "0.11.18"
tokio = { version = "1.30.0", features = ["full"] }
